[package]
name = "cli_todo_list_sqlite"
version = "0.1.1"
authors = ["TudorIsCoding"]
edition = "2021"
description = "A simple CLI todo list in rust using sqlite"
license = "MIT"
repository = "https://github.com/TudorIsCoding/CLI-Todo"
keywords = ["todo", "cli"]
categories = ["command-line-utilities"]
readme = "README.md"

[dependencies]
rusqlite = { version = "0.32.1", features = ["bundled"]}
colored = "2.1.0"

[[bin]]
name = "todo"
path = "src/main.rs"
